data-encryption/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: dencrypt
spec:
  selector:
   matchLabels:
     app: frontend
  mtls:
    mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: dencrypt
spec:
  selector:
   matchLabels:
     app: backend
  mtls:
    mode: PERMISSIVE
