data-encryption/web-s.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: dencrypt
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - port: 8080           # Cluster-internal port
      targetPort: 8080     # Container port
      nodePort: 30081      # External access (use a value between 30000–32767)
