data-encryption/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: default
  namespace: dencrypt
spec:
  host: "*.dencrypt.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
